--- a/todo-front/package.json
+++ b/todo-front/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.10.1",
+    "@vee-validate/i18n": "^4.15.0",
+    "@vee-validate/rules": "^4.15.0",
     "firebase": "^11.4.0",
     "firebase-tools": "^13.31.2",
     "nuxt": "^3.15.4",
